k8s/base/02-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: hospital
spec:
  replicas: 1
  selector:
    matchLabels: { app: postgres }
  template:
    metadata:
      labels: { app: postgres }
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
            - name: init-scripts
              mountPath: /docker-entrypoint-initdb.d
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "hospital"]
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests: { cpu: "250m", memory: "256Mi" }
            limits: { cpu: "1", memory: "512Mi" }
      volumes:
        - name: data
          persistentVolumeClaim: { claimName: postgres-pvc }
        - name: init-scripts
          configMap: { name: postgres-init-scripts }
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: hospital
spec:
  selector: { app: postgres }
  ports:
    - port: 5432
      targetPort: 5432
