k8s/base/03-authorization-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorization-service
  namespace: grupo-6
spec:
  replicas: 1
  selector:
    matchLabels: { app: authorization-service }
  template:
    metadata:
      labels: { app: authorization-service }
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9100"
    spec:
      containers:
        - name: authorization-service
          image: hospital/authorization-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50051
            - containerPort: 9100
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits: { cpu: "200m", memory: "256Mi" }
          readinessProbe:
            tcpSocket: { port: 50051 }
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            tcpSocket: { port: 50051 }
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: authorization-service
  namespace: grupo-6
spec:
  selector: { app: authorization-service }
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
    - name: metrics
      port: 9100
      targetPort: 9100
