k8s/base/04-patient-data-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-data-service
  namespace: grupo-6
spec:
  replicas: 3
  selector:
    matchLabels: { app: patient-data-service }
  template:
    metadata:
      labels: { app: patient-data-service }
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9101"
    spec:
      containers:
        - name: patient-data-service
          image: hospital/patient-data-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50052
            - containerPort: 9101
          resources:
            requests: { cpu: "150m", memory: "128Mi" }
            limits: { cpu: "300m", memory: "384Mi" }
          readinessProbe:
            tcpSocket: { port: 50052 }
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            tcpSocket: { port: 50052 }
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: patient-data-service
  namespace: grupo-6
spec:
  selector: { app: patient-data-service }
  ports:
    - name: grpc
      port: 50052
      targetPort: 50052
    - name: metrics
      port: 9101
      targetPort: 9101
