k8s/base/06-keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: hospital
spec:
  replicas: 1
  selector:
    matchLabels: { app: keycloak }
  template:
    metadata:
      labels: { app: keycloak }
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:25.0
          args: ["start-dev", "--import-realm"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: realm-import
              mountPath: /opt/keycloak/data/import
          readinessProbe:
            httpGet: { path: /realms/hospital, port: 8080 }
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            requests: { cpu: "250m", memory: "512Mi" }
            limits: { cpu: "1", memory: "1Gi" }
      volumes:
        - name: realm-import
          configMap: { name: keycloak-realm }
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: hospital
spec:
  selector: { app: keycloak }
  ports:
    - port: 8080
      targetPort: 8080
